--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <div id="root"></div>
 
     <script
-  type="text/javascript"
+  type="text/jsx"
   src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+  
   </body>
 </html>
